--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,5 +53,7 @@
     "fortran_fixed-form": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
     "fortran": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
     "sml": "cd $dir && sml $fileName"
-  }
+  },
+"emmet.showSuggestionsAsSnippets": true,
+"emmet.includeLanguages": {"html.erb": "html", "erb": "html"}
 }
